--- a/angular.json
+++ b/angular.json
@@ -1,5 +1,8 @@
 {
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+  "cli": {
+    "analytics": "9d40deb4-6c1f-4b5e-bd8d-f25b2e71da42"
+  },
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
